--- a/app/src/main/res/layout/fragment_cake.xml
+++ b/app/src/main/res/layout/fragment_cake.xml
@@ -1,57 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/item_list"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/collection_list"
-            android:name="com.tong.android.fragment.CollectionListFragment"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            tools:context="com.example.android.donutapp.CakeFragment"
-            tools:listitem="@layout/donut_item"
-        />
-
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/batter_list"
-            android:name="com.tong.android.fragment.CollectionListFragment"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            tools:context="com.example.android.donutapp.CakeFragment"
-            tools:listitem="@layout/donut_item"
-        />
-
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/topping_list"
-            android:name="com.tong.android.fragment.CollectionListFragment"
-            android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="LinearLayoutManager"
-            tools:context="com.example.android.donutapp.CakeFragment"
-            tools:listitem="@layout/donut_item"
-        />
-
-    </LinearLayout>
+        android:layout_height="match_parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:mContext="com.example.android.donutapp.CakeFragment"
+        tools:listitem="@layout/donut_item"/>
 
 </RelativeLayout>
 
